Fix leg based fares